* Computational efficiency of pumpingRate_SAestimation.updateStochForcingData() is improved by replacing a for-loop with a vectorised form.
* climateTransform_soilMoistureModels.setTransformedForcing() is now only undertaken when the soil parameters change. This was undertaken to improve computational efficiency and should not change the results from any model.
* Calibration scheme SP-UCI tweaked to produce more efficient calibration when stochastic forcing data is being derived (eg from pumpingRate_SAestimation)
* Bug fixed in HydroSight_GUI() that caused model construction to crash when (somewhow) there are duplicate model labels in the calibration table.

22 May 2018
* Bug fixed in calibration scheme SP-UCI when calibration when stochastic forcing data. The issue resolved was that after each evolutionary loop the objective function value was not updated using the final stochastic forcing. This caused instability in the calibration.
* Formatting of GUI tool tips reformatted.

23 May 2018
* GUI help moved to using that at https://github.com/peterson-tim-j/HydroSight/wiki
* MEX .C files recompiled for Windows.

22 May 2018
* Bug fixed in calibration scheme SP-UCI when calibration when stochastic forcing data. The issue resolved was that after the end of each complex, the final stochastic forcing was not returned. This caused the stochastic forcing to not be updated.
* Calibration GUI now has a progress bar.
* Calibration GUI now modal ie the user can't switch to other HydroSight windows.

13 Aug 2018
* Feature added to GUI opetions for pumpingRate_SAestimation() allowing the wizard selected bores to be pushed to the pumping weighting component.
* Bug fixed in calibration GUI daily data results table. Now the day of the month is correct.
* Significant impovement in the calibration time of models containing pumpingRate_SAestimation(). 